Added Relationship code into process.pl

--- a/Templates/indihead.tt
+++ b/Templates/indihead.tt
@@ -4,6 +4,9 @@
       <div class="panel-title">
         [% person.givennames %]&nbsp;[% person.surname %]
         ([% notBlank('', person.born) %] - [% notBlank('', person.died) %])
+         [% IF relationship %]
+         &nbsp;[% relationship %] of Peter Barlow
+         [% END %]
         <div class="pull-right">
           [ [% indiref %] ]
           <a class="btn btn-default btn.sm" href="#TOP"><span class="glyphicon glyphicon-hand-up"> Top</span></a>
