Beta test with live servers

--- a/Templates/navbar.tt
+++ b/Templates/navbar.tt
@@ -12,13 +12,13 @@
             <a href="surname_index.htm">Surname Index</a>
           </li>
           <li>
-            <a href="TODO.htm">Charts</a>
+            <a href="charts.htm">Charts</a>
           </li>
           <li>
-            <a href="TODO.htm">Master Place Index</a>
+            <a href="places.htm">Master Place Index</a>
           </li>
           <li>
-            <a href="TODO.htm">Location Maps</a>
+            <a href="maps.htm">Location Maps</a>
           </li>
           <li>
             <a href="about.htm">About</a>
