--- a/Templates/index.tt
+++ b/Templates/index.tt
@@ -39,9 +39,8 @@
       around Wigan, Lancashire. The Morgans and McNamaras were of Irish descent,
       the Halls were Irish on the maternal side, the Andrews came from Yorkshire,
       the rest seem to have been native Lancastrians.</p>
-      <p>But there are lots of other names to be found here - families my distant
-      relatives married into, witnessess of various events, and various people
-      they shared accomodation with.</p>
+      <p>This site is currently under development as I have moved my software
+      from TMG to Family Historian.</p>
       <p>Use the menu above to navigate the site - you can look for names, view
       the descendancy charts, or look at the images. Send me an email using the
       link below if you think you are related to any of these lines, or have any
