Census Witness Residences

--- a/Templates/about.tt
+++ b/Templates/about.tt
@@ -4,6 +4,7 @@
     title = "About This Website"
   %]
 <body id="todo">
+  [% INCLUDE analytics.tt %]
   <div class="container">
     [% INCLUDE navbar.tt %]
     <div class="jumbotron">
