--- a/Templates/personpagehead.tt
+++ b/Templates/personpagehead.tt
@@ -4,6 +4,7 @@
     title = "Person Page"
   %]
 <body id="personpages">
+  [% INCLUDE analytics.tt %]
   <div class="container">
     [% INCLUDE navbar.tt %]
   <div class="page-header">
