--- a/Templates/footer.tt
+++ b/Templates/footer.tt
@@ -10,3 +10,10 @@
   		</h5>
     </div>
 </div>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="js/jquery.min.js" type= "text/javascript"> </script>
+<script src="js/bootstrap.min.js" type= "text/javascript"> </script>
+<script src="js/custom.js" type= "text/javascript"> </script>
+<script src="js/styleswitcher.js" type= "text/javascript"> </script>
