--- a/Templates/index.tt
+++ b/Templates/index.tt
@@ -5,6 +5,7 @@
   %]
 
 <body id="mainpage">
+  [% INCLUDE analytics.tt %]
   <div class="container">
     [% INCLUDE navbar.tt %]
     <div class="jumbotron">
@@ -14,8 +15,6 @@
       around Wigan, Lancashire. The Morgans and McNamaras were of Irish descent,
       the Halls were Irish on the maternal side, the Andrews came from Yorkshire,
       the rest seem to have been native Lancastrians.</p>
-      <p>This site is currently under development as I have moved my software
-      from TMG to Family Historian.</p>
       <p>Use the menu above to navigate the site - you can look for names, view
       the descendancy charts, or look at the images. Send me an email using the
       link below if you think you are related to any of these lines, or have any
