--- a/Templates/header.tt
+++ b/Templates/header.tt
@@ -6,19 +6,23 @@
     <meta name="Keywords" content="Barlow, Hall, Heaney, Stephenson, Woodcock, Worrall, Ratcliffe, Morgan, Unsworth, Andrews, Ollerton">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="ico/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="ico/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="ico/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="ico/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="ico/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="ico/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="ico/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="ico/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="ico/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="ico/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32">
+    <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+    <link rel="manifest" href="ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="css/assets/css/custom.min.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
